--- a/cbcui/ui/MainMenu.ui
+++ b/cbcui/ui/MainMenu.ui
@@ -18,6 +18,9 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" >
+   <property name="topMargin" >
+    <number>12</number>
+   </property>
    <item>
     <layout class="QHBoxLayout" >
      <item>
