--- a/cbcui/ui/Keypad.ui
+++ b/cbcui/ui/Keypad.ui
@@ -63,7 +63,14 @@ color:white;
       <number>4</number>
      </property>
      <item>
-      <widget class="QLineEdit" name="ui_outputLine" />
+      <widget class="QLineEdit" name="ui_outputLine" >
+       <property name="text" >
+        <string/>
+       </property>
+       <property name="alignment" >
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="ui_clearButton" >
