--- a/cbcui/ui/MotorTuning.ui
+++ b/cbcui/ui/MotorTuning.ui
@@ -622,15 +622,18 @@ font-size:20pt;</string>
        </property>
        <property name="minimumSize" >
         <size>
-         <width>40</width>
+         <width>45</width>
          <height>20</height>
         </size>
        </property>
        <property name="maximumSize" >
         <size>
-         <width>40</width>
+         <width>45</width>
          <height>20</height>
         </size>
+       </property>
+       <property name="text" >
+        <string>100</string>
        </property>
        <property name="alignment" >
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -667,15 +670,18 @@ font-size:20pt;</string>
        </property>
        <property name="minimumSize" >
         <size>
-         <width>90</width>
+         <width>100</width>
          <height>20</height>
         </size>
        </property>
        <property name="maximumSize" >
         <size>
-         <width>90</width>
+         <width>100</width>
          <height>20</height>
         </size>
+       </property>
+       <property name="text" >
+        <string>1000</string>
        </property>
        <property name="alignment" >
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -700,7 +706,7 @@ font-size:20pt;</string>
    <item>
     <layout class="QHBoxLayout" >
      <property name="spacing" >
-      <number>0</number>
+      <number>10</number>
      </property>
      <property name="bottomMargin" >
       <number>3</number>
@@ -771,13 +777,19 @@ font-size:12pt;
       <widget class="QLabel" name="positionLabel" >
        <property name="font" >
         <font>
-         <pointsize>12</pointsize>
+         <pointsize>16</pointsize>
          <weight>75</weight>
+         <italic>false</italic>
          <bold>true</bold>
         </font>
        </property>
+       <property name="styleSheet" >
+        <string>color:black;
+font:bold;
+font-size:16pt;</string>
+       </property>
        <property name="text" >
-        <string>Position:</string>
+        <string>Position</string>
        </property>
        <property name="alignment" >
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -788,19 +800,31 @@ font-size:12pt;
       <widget class="QLabel" name="ui_MotorPositionLabel" >
        <property name="minimumSize" >
         <size>
-         <width>70</width>
-         <height>0</height>
+         <width>100</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>100</width>
+         <height>30</height>
         </size>
        </property>
        <property name="font" >
         <font>
-         <pointsize>12</pointsize>
+         <pointsize>16</pointsize>
          <weight>75</weight>
+         <italic>false</italic>
          <bold>true</bold>
         </font>
        </property>
+       <property name="styleSheet" >
+        <string>color:black;
+font:bold;
+font-size:16pt;</string>
+       </property>
        <property name="text" >
-        <string>0</string>
+        <string>100000</string>
        </property>
        <property name="alignment" >
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
