--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -56,7 +56,7 @@
      <item>
       <widget class="QPushButton" name="ui_recalibrateMotorsButton" >
        <property name="enabled" >
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="minimumSize" >
         <size>
@@ -105,7 +105,7 @@ font-size:12pt;
      <item>
       <widget class="QPushButton" name="ui_recalibrateAccelerometerButton" >
        <property name="enabled" >
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="minimumSize" >
         <size>
